# python-ultimaker-printer-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python.yml
doc/: README.md  api-cluster.json  api.json
scripts/: mdns.py
test/: test_ultimaker.py
ultimaker/: __init__.py  api.py
